# datalints

./: .gitignore  .ignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  datalints.drawio  flake.nix  notes.md  notes.org  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: commitlint.yml
src/: document.rs  lib.rs  lints.rs  main.rs  pipeline.rs  reader.rs  tests_common.rs
src/lints/: enum_as_float.rs  number_as_string.rs  tokenizable_string.rs
tests/: test_run.rs
tests/test_data/: csv_test.csv  jsonl_test.jsonl  tsv_test.tsv  txt_test.txt
