[package]
name = "datalints"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.11"
arrow = { version = "55.0.0", features = ["json", "csv"] }
arrow-csv = "55.0.0"
arrow-json = "55.0.0"
compact_str = { version = "0.9.0", features = ["proptest", "serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
eyre = "0.6.12"
log = "0.4.27"
parameterized = "2.0.0"
parquet = "55.0.0"
thiserror = "2.0.12"
