[package]
name = "datalints"
version = "0.1.0"
edition = "2024"

[build]
rustflasgs = ["-C target-cpu=native -C target-feature=-prefer-256-bit"]

[dependencies]
ahash = "0.8.11"
arrow = { version = "55.0.0", features = ["json", "csv"] }
arrow-json = "55.0.0"
compact_str = { version = "0.9.0", features = ["proptest", "serde"] }
csv = "1.3.1"
derive_more = { version = "2.0.1", features = ["full"] }
eyre = "0.6.12"
flatarray = { version = "1.1.0", features = ["serde"] }
jiff = { version = "0.2.14", features = ["serde"] }
log = "0.4.27"
memmap2 = "0.9.5"
parameterized = "2.0.0"
parquet = "55.0.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"

[dev-dependencies]
enum-iterator = "2.1.0"
