[package]
name = "datalints"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.11"
arrow = { version = "55.0.0", features = ["json", "csv"] }
arrow-buffer = "55.1.0"
arrow-json = "55.0.0"
arrow-schema = "55.1.0"
clap = { version = "4.5.40", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
eyre = "0.6.12"
memmap2 = "0.9.5"
parameterized = "2.0.0"
parquet = "55.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
enum-iterator = "2.1.0"
insta = "1.43.1"
pretty_assertions = "1.4.1"

# We can use (import) the library as datalints
[lib]
name = "datalints"
path = "src/lib.rs"

[[bin]]
name = "datalinter"
path = "src/main.rs"


